--- a/index.html
+++ b/index.html
@@ -1,89 +1,81 @@
 <!DOCTYPE html>
-<html lang="ro">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QuickBrief AI | Smart News</title>
+    <title>QuickBrief Pro | Intelligence</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;500;700&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Plus Jakarta Sans', sans-serif; }
-        .glass-card { background: rgba(255, 255, 255, 0.8); backdrop-filter: blur(10px); }
+        body { font-family: 'Space Grotesk', sans-serif; background-color: #0a0a0a; color: #e5e5e5; }
+        .nav-blur { background: rgba(10, 10, 10, 0.8); backdrop-filter: blur(12px); border-bottom: 1px solid #262626; }
+        .card-news { background: #171717; border: 1px solid #262626; transition: all 0.3s; }
+        .card-news:hover { border-color: #3b82f6; transform: translateY(-2px); }
+        .filter-btn.active { background-color: #3b82f6; color: white; }
     </style>
 </head>
-<body class="bg-slate-50 text-slate-900 leading-tight">
+<body>
 
-    <nav class="sticky top-0 z-50 bg-white/80 backdrop-blur-md border-b border-slate-200 p-4">
-        <div class="max-w-xl mx-auto flex justify-between items-center">
-            <span class="text-xl font-extrabold tracking-tight text-blue-600">QUICKBRIEF<span class="text-slate-900">.AI</span></span>
-            <div id="status-dot" class="flex items-center text-[10px] font-bold text-slate-400 uppercase tracking-widest">
-                <span class="w-2 h-2 bg-green-500 rounded-full mr-2 animate-pulse"></span> Live Update
+    <nav class="nav-blur sticky top-0 z-50 p-4">
+        <div class="max-w-4xl mx-auto flex justify-between items-center">
+            <h1 class="text-xl font-bold tracking-tighter text-blue-500">QUICKBRIEF PRO</h1>
+            <div class="hidden md:flex space-x-2" id="filters">
+                <button onclick="filterNews('All')" class="filter-btn active px-3 py-1 text-xs rounded-full border border-neutral-700">All</button>
+                <button onclick="filterNews('Tech')" class="filter-btn px-3 py-1 text-xs rounded-full border border-neutral-700">Tech</button>
+                <button onclick="filterNews('Markets')" class="filter-btn px-3 py-1 text-xs rounded-full border border-neutral-700">Markets</button>
+                <button onclick="filterNews('Finance')" class="filter-btn px-3 py-1 text-xs rounded-full border border-neutral-700">Finance</button>
             </div>
         </div>
     </nav>
 
-    <main class="max-w-xl mx-auto p-4 pt-8">
-        <header class="mb-10 text-center">
-            <h1 class="text-3xl font-extrabold mb-2 tracking-tight">Focus on what matters.</h1>
-            <p class="text-slate-500">Știri complexe explicate scurt și clar de inteligența artificială.</p>
-        </header>
+    <main class="max-w-2xl mx-auto p-4 py-10">
+        <section class="mb-16 p-8 rounded-3xl bg-gradient-to-br from-blue-900/20 to-transparent border border-blue-500/20 text-center">
+            <h2 class="text-2xl font-bold mb-2">The Morning Brief</h2>
+            <p class="text-neutral-400 mb-6 text-sm">Get 5 minutes of intelligence in your inbox every day.</p>
+            <form action="https://formspree.io/f/YOUR_ID" method="POST" class="flex flex-col md:flex-row gap-2">
+                <input type="email" name="email" placeholder="Your work email" required class="flex-1 bg-neutral-900 border border-neutral-700 rounded-xl px-4 py-2 outline-none focus:border-blue-500 text-sm">
+                <button type="submit" class="bg-blue-600 hover:bg-blue-500 px-6 py-2 rounded-xl text-sm font-bold transition">Join Pro</button>
+            </form>
+        </section>
 
-        <div id="news-feed" class="space-y-6">
-            <div class="animate-pulse flex flex-col space-y-4">
-                <div class="h-48 bg-slate-200 rounded-2xl"></div>
-                <div class="h-48 bg-slate-200 rounded-2xl"></div>
-            </div>
-        </div>
+        <div id="feed" class="space-y-6"></div>
     </main>
 
     <script>
-        async function fetchNews() {
-            try {
-                const response = await fetch('news_data.json?t=' + new Date().getTime());
-                const data = await response.json();
-                renderNews(data);
-            } catch (err) {
-                console.error("Fetch error:", err);
-            }
+        let allNews = [];
+        async function load() {
+            const r = await fetch('news_data.json?t=' + Date.now());
+            allNews = await r.json();
+            render('All');
         }
 
-        function renderNews(news) {
-            const feed = document.getElementById('news-feed');
-            feed.innerHTML = '';
-
-            news.forEach(item => {
-                const card = document.createElement('article');
-                card.className = "bg-white rounded-3xl p-6 shadow-sm border border-slate-100 hover:shadow-xl transition-all duration-300";
-                
-                // Formatare summary din string în bullet points
-                const summaryHtml = item.summary.split('\n').map(line => {
-                    if(line.trim() === '') return '';
-                    return `<li class="mb-2 pl-1">${line.replace(/^[•*-]\s*/, '')}</li>`;
-                }).join('');
-
-                card.innerHTML = `
-                    <div class="flex items-center gap-2 mb-4">
-                        <span class="bg-blue-100 text-blue-700 text-[10px] font-bold px-2 py-0.5 rounded-full uppercase tracking-wider">${item.source}</span>
-                        <span class="text-slate-400 text-xs">${item.date}</span>
-                    </div>
-                    <h2 class="text-xl font-extrabold mb-4 leading-snug text-slate-800">${item.title}</h2>
-                    <ul class="text-slate-600 text-sm list-disc list-inside space-y-1 mb-6">
-                        ${summaryHtml}
-                    </ul>
-                    <div class="pt-4 border-t border-slate-50">
-                        <a href="${item.link}" target="_blank" class="text-xs font-bold text-slate-400 hover:text-blue-600 flex items-center gap-1 transition-colors uppercase tracking-widest">
-                            Read Original Source
-                            <svg class="w-3 h-3" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
-                        </a>
+        function render(cat) {
+            const container = document.getElementById('feed');
+            container.innerHTML = '';
+            const filtered = cat === 'All' ? allNews : allNews.filter(n => n.category === cat);
+            
+            filtered.forEach(n => {
+                container.innerHTML += `
+                    <div class="card-news p-6 rounded-2xl">
+                        <div class="flex items-center gap-3 mb-4">
+                            <span class="text-[10px] font-bold py-1 px-2 rounded bg-blue-500/10 text-blue-400 uppercase tracking-widest">${n.category}</span>
+                            <span class="text-neutral-600 text-[10px] uppercase font-bold tracking-widest">${n.date}</span>
+                        </div>
+                        <h3 class="text-lg font-bold mb-4 leading-tight">${n.title}</h3>
+                        <div class="text-neutral-400 text-sm space-y-2 mb-6 opacity-80">${n.summary.replace(/\n/g, '<br>')}</div>
+                        <a href="${n.link}" target="_blank" class="text-[10px] font-bold text-blue-500 uppercase tracking-widest hover:underline">Full Report →</a>
                     </div>
                 `;
-                feed.appendChild(card);
             });
         }
 
-        fetchNews();
-        // Refresh la 60 de secunde
-        setInterval(fetchNews, 60000);
+        function filterNews(cat) {
+            document.querySelectorAll('.filter-btn').forEach(b => b.classList.remove('active'));
+            event.target.classList.add('active');
+            render(cat);
+        }
+
+        load();
     </script>
 </body>
 </html>
