--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QuickBrief Pro | Financial Intelligence</title>
+    <title>QuickBrief Pro | Intelligence</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -13,7 +13,7 @@
         .news-card:hover { border-color: #3b82f6; transform: translateY(-2px); box-shadow: 0 10px 30px -15px rgba(59, 130, 246, 0.2); }
         .filter-btn { transition: all 0.2s; color: #737373; border-color: #262626; }
         .filter-btn:hover { color: #fff; border-color: #404040; }
-        .filter-btn.active { background: #3b82f6; color: #fff; border-color: #3b82f6; shadow: 0 0 15px rgba(59, 130, 246, 0.4); }
+        .filter-btn.active { background: #3b82f6; color: #fff; border-color: #3b82f6; box-shadow: 0 0 15px rgba(59, 130, 246, 0.4); }
         .summary-list li::before { content: "→"; color: #3b82f6; font-weight: bold; display: inline-block; width: 1.5em; margin-left: -1.5em; }
     </style>
 </head>
@@ -36,24 +36,18 @@
     </nav>
 
     <main class="max-w-2xl mx-auto p-4 pt-12">
-        <section class="mb-16 p-8 rounded-3xl bg-blue-600/5 border border-blue-500/20 relative overflow-hidden">
-            <div class="relative z-10 text-center">
-                <h2 class="text-2xl font-bold mb-2">The 5-Minute Executive Brief</h2>
-                <p class="text-neutral-400 mb-8 text-sm max-w-sm mx-auto">Join 2,000+ professionals getting curated global intelligence daily.</p>
-                
-                <form action="https://formspree.io/f/maqdaepr" method="POST" class="flex flex-col sm:flex-row gap-2 max-w-md mx-auto">
-                    <input type="email" name="email" placeholder="Enter your business email" required 
-                        class="flex-1 bg-black/40 border border-white/10 rounded-xl px-4 py-3 outline-none focus:border-blue-500 text-sm transition-all">
-                    <button type="submit" class="bg-blue-600 hover:bg-blue-700 text-white px-8 py-3 rounded-xl text-sm font-bold transition-all shadow-lg shadow-blue-600/20">
-                        Subscribe Free
-                    </button>
-                </form>
+        <div class="mb-10 flex justify-between items-end border-b border-white/5 pb-6">
+            <div>
+                <h2 class="text-sm font-bold text-neutral-500 uppercase tracking-[0.2em]">Global Intelligence</h2>
+                <p class="text-xs text-neutral-600 mt-1">Real-time AI curated financial updates</p>
             </div>
-            <div class="absolute -top-24 -right-24 w-48 h-48 bg-blue-600/10 rounded-full blur-3xl"></div>
-        </section>
+            <div id="live-indicator" class="flex items-center gap-2 text-[10px] font-bold text-green-500 uppercase tracking-widest">
+                <span class="w-1.5 h-1.5 bg-green-500 rounded-full animate-ping"></span> Live
+            </div>
+        </div>
 
-        <div id="news-feed" class="space-y-8">
-            <div class="text-center py-20 text-neutral-600 animate-pulse">Scanning global markets...</div>
+        <div id="news-feed" class="space-y-8 pb-20">
+            <div class="text-center py-20 text-neutral-600 animate-pulse">Syncing with global terminals...</div>
         </div>
     </main>
 
@@ -67,7 +61,7 @@
                 renderNews('All');
             } catch (err) {
                 console.error("Failed to load news:", err);
-                document.getElementById('news-feed').innerHTML = "<div class='text-red-500 text-center'>Connection error. Please refresh.</div>";
+                document.getElementById('news-feed').innerHTML = "<div class='text-red-500 text-center'>Connection error.</div>";
             }
         }
 
@@ -78,7 +72,7 @@
             const filtered = filter === 'All' ? newsData : newsData.filter(n => n.category === filter);
 
             if (filtered.length === 0) {
-                container.innerHTML = `<div class="text-center py-10 text-neutral-500 text-sm italic">No new updates in ${filter} yet.</div>`;
+                container.innerHTML = `<div class="text-center py-10 text-neutral-500 text-sm italic">No data in ${filter} section.</div>`;
                 return;
             }
 
@@ -86,22 +80,21 @@
                 const card = document.createElement('div');
                 card.className = "news-card p-6 rounded-2xl";
                 
-                // Formatează summary în listă
                 const points = item.summary.split('\n').filter(p => p.trim() !== '');
                 const listHtml = points.map(p => `<li class="mb-2">${p.replace(/^[•*-]\s*/, '')}</li>`).join('');
 
                 card.innerHTML = `
                     <div class="flex items-center gap-3 mb-4">
-                        <span class="text-[10px] font-extrabold px-2 py-0.5 rounded bg-blue-600/20 text-blue-400 border border-blue-500/30 uppercase tracking-widest">${item.category}</span>
+                        <span class="text-[10px] font-extrabold px-2 py-0.5 rounded bg-blue-600/10 text-blue-400 border border-blue-500/20 uppercase tracking-widest">${item.category}</span>
                         <span class="text-neutral-500 text-[10px] font-bold uppercase tracking-widest">${item.date}</span>
                     </div>
-                    <h3 class="text-xl font-bold mb-4 leading-snug tracking-tight text-white/95">${item.title}</h3>
+                    <h3 class="text-xl font-bold mb-4 leading-snug tracking-tight text-white/90">${item.title}</h3>
                     <ul class="summary-list text-neutral-400 text-sm leading-relaxed mb-6 ml-6">
                         ${listHtml}
                     </ul>
                     <div class="pt-4 border-t border-white/5">
-                        <a href="${item.link}" target="_blank" class="inline-flex items-center text-[10px] font-bold text-neutral-500 hover:text-blue-500 uppercase tracking-widest transition-colors">
-                            Original Report
+                        <a href="${item.link}" target="_blank" class="inline-flex items-center text-[10px] font-bold text-neutral-600 hover:text-blue-500 uppercase tracking-widest transition-colors">
+                            Read Full Report
                             <svg class="w-3 h-3 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
                         </a>
                     </div>
@@ -117,7 +110,6 @@
         }
 
         init();
-        // Refresh automat la 5 minute
         setInterval(init, 300000);
     </script>
 </body>
